correction z-index

--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -4,7 +4,7 @@
     left: 0;
     position: fixed;
     width: 100%;
-    z-index: 2;
+    z-index: 8;
 }
 
 .header__items {
